Shuffles schedule; adds presenters.

--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -184,7 +184,7 @@
                 <tr>
                   <th class="timeslot">Time slot</th>
                   <th>Topic</th>
-                  <!-- <th>Presenters</th> -->
+                  <th>Presenters</th>
                   <!-- <th /> -->
                 </tr>
               </thead>
@@ -192,31 +192,31 @@
                 <tr>
                   <td scope="row" class="timeslot">09:00 - 09:45</th>
                   <td class="topic">Preliminaries</td>
-                  <!-- <td /> -->
+                  <td>Alexey Borisov</td>
                   <!-- <td /> -->
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">09:45 - 10:30</th>
                   <td class="topic">Semantic matching</td>
-                  <!-- <td /> -->
+                  <td>Christophe Van Gysel</td>
                   <!-- <td /> -->
                 </tr>
                 <tr class="break">
                   <td scope="row" class="timeslot">10:30 - 11:00</th>
                   <td>Coffee break</td>
-                  <!-- <td /> -->
+                  <td />
                   <!-- <td /> -->
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">11:00 - 11:45</th>
                   <td class="topic">Learning to rank</td>
-                  <!-- <td /> -->
+                  <td>Hosein Azarbonyad</td>
                   <!-- <td /> -->
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">11:45 - 12:30</th>
                   <td class="topic">Entities</td>
-                  <!-- <td /> -->
+                  <td>Tom Kenter, Christophe Van Gysel</td>
                   <!-- <td /> -->
                 </tr>
                 <tr class="break">
@@ -228,13 +228,13 @@
                 <tr>
                   <td scope="row" class="timeslot">14:00 - 14:45</th>
                   <td class="topic">Modeling User Behavior</td>
-                  <!-- <td /> -->
+                  <td>Alexey Borisov</td>
                   <!-- <td /> -->
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">14:45 - 15:30</th>
                   <td class="topic">Generating Responses</td>
-                  <!-- <td /> -->
+                  <td>Tom Kenter</td>
                   <!-- <td /> -->
                 </tr>
                 <tr class="break">
@@ -245,14 +245,14 @@
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">16:00 - 16:45</th>
-                  <td class="topic">Industry insights</td>
-                  <!-- <td /> -->
+                  <td class="topic">Recommender systems</td>
+                  <td>Hosein Azarbonyad</td>
                   <!-- <td /> -->
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">16:45 - 17:30</th>
-                  <td class="topic">Recommender systems and Q & A</td>
-                  <!-- <td /> -->
+                  <td class="topic">Industry insights</td>
+                  <td>Alexey Borisov, Tom Kenter</td>
                   <!-- <td /> -->
                 </tr>
               </tbody>
