Small schedule update.

--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -216,7 +216,7 @@
                 <tr>
                   <td scope="row" class="timeslot">11:00 - 11:45</th>
                   <td class="topic">Learning to rank</td>
-                  <td>Hosein Azarbonyad</td>
+                  <td>Christophe Van Gysel, Hosein Azarbonyad</td>
                   <!-- <td /> -->
                 </tr>
                 <tr>
