Updates ECIR/SIGIR websites with links to WSDM edition.

--- a/ecir2018/index.html
+++ b/ecir2018/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems. What are the underlying key technologies and what key insights into IR problems are they able to give us? This full-day tutorial gives a clear overview of current tried-and-trusted neural methods in IR and how they benefit IR research and our understanding of IR problems. Additionally, we peek into the future by examining recently introduced paradigms as well as current challenges. Expect to learn about neural networks in semantic matching, ranking, user interaction, and response generation in a highly interactive tutorial.">
     <meta name="author" content="Tom Kenter, Alexey Borisov, Christophe van Gysel, Mostafa Dehghani, Maarten de Rijke, Bhaskar Mitra">
 
-    <title>Neural Networks for Information Retrieval</title>
+    <title>ECIR 2018 - Neural Networks for Information Retrieval</title>
 
     <meta property="og:title" content="Neural Networks for Information Retrieval at ECIR 2018" />
     <meta property="og:type" content="website" />
@@ -147,6 +147,10 @@
 <body>
 
     <div class="container">
+
+        <div class="alert alert-warning" role="alert">
+          <strong>Are you looking for the WSDM 2018 tutorial?</strong> Click <a href="../wsdm2018">here</a>.
+        </div>
 
         <div class="jumbotron">
             <h1 class="display-3">Neural Networks for Information Retrieval</h1>
