--- a/sigir2017/index.html
+++ b/sigir2017/index.html
@@ -210,7 +210,7 @@
                 <form action="http://www.google.com">
                 <input type="text" class="form-control" id="search-input" name="q" value="Neural Networks for Information Retrieval" autocomplete="off" style="width: 600px; height:55px; font-weight: bold; font-size: 28px; color: black" />
                 <div style="position: relative; left: 490px; top: -55px">
-                    <button class="btn btn-default" style="padding: 10px 25px 0 0; position: absolute; top: 0; left: 122.5px; margin-top: 0px">
+                    <button class="btn btn-default" style="padding: 10px 25px 0 0; position: absolute; top: 0; left: 122.5px; margin-top: 0px; background: #dedede">
                          <img src="images/magnifying_glass.png" width="67px" />
                     </button>
                     <img src="images/nn.png" width="188px" style="position: absolute; top: 42px; left: 1px" />
@@ -221,12 +221,15 @@
         </div>
 
         <div class="jumbotron" style="position: relative; z-index: 0; padding-bottom: 1em">
+            <div class="alert alert-warning" role="alert">
+              <strong>Are you looking for the WSDM 2018 tutorial?</strong> Click <a href="../wsdm2018">here</a>.
+            </div>
+
             <h1 style="font-size: 2em">Neural Networks for Information Retrieval</h1>
             <p class="lead">Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems.</p>
             <p><a class="btn btn-lg btn-success" href="slides/NN4IR.pdf" target="_blank" role="button" style="padding-top: .50rem; padding-bottom: .50rem; padding-left: 1rem"><img src="images/glyphicons-201-download.png" /> &nbsp; <span style="display: inline; vertical-align: text-top;">Download slides (PDF, 18MB)</span></a></p>
             <h5>Full-day tutorial at SIGIR 2017 on August 7, 2017</h5>
         </div>
-        <!-- /.container -->
 
         <div id="schedule" class="container marketing">
             <h1 style="text-align: center">Table of contents</h1>
