--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -331,7 +331,7 @@
 
         </div>
 
-        <div class="container marketing">
+        <div id="organizers" class="container marketing">
             <h1 style="text-align: center">Organizers</h1>
             <div class="row">
                 <div class="col-lg-4">
