Small schedule shuffle.

--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -9,6 +9,8 @@
 
     <title>WSDM 2018 - Neural Networks for Information Retrieval</title>
 
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+
     <meta property="og:title" content="Neural Networks for Information Retrieval at WSDM 2018" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://nn4ir.com/wsdm2018" />
@@ -250,9 +252,9 @@
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">09:45 - 10:30</th>
-                  <td class="topic">Semantic matching</td>
-                  <td>Christophe Van Gysel</td>
-                  <td><a href="slides/02_SemanticMatching.pdf" target="_blank">section slides</a></td>
+                  <td class="topic">Modeling User Behavior</td>
+                  <td>Alexey Borisov</td>
+                  <td><a href="slides/05_UserBehavior.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr class="break">
                   <td scope="row" class="timeslot">10:30 - 11:00</th>
@@ -262,15 +264,15 @@
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">11:00 - 11:45</th>
-                  <td class="topic">Learning to rank</td>
-                  <td>Christophe Van Gysel, Hosein Azarbonyad</td>
-                  <td><a href="slides/03_LearningToRank.pdf" target="_blank">section slides</a></td>
+                  <td class="topic">Semantic matching</td>
+                  <td>Christophe Van Gysel</td>
+                  <td><a href="slides/02_SemanticMatching.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">11:45 - 12:30</th>
-                  <td class="topic">Entities</td>
-                  <td>Tom Kenter, Christophe Van Gysel</td>
-                  <td><a href="slides/04_Entities.pdf" target="_blank">section slides</a></td>
+                  <td class="topic">Learning to rank</td>
+                  <td>Christophe Van Gysel, Hosein Azarbonyad</td>
+                  <td><a href="slides/03_LearningToRank.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr class="break">
                   <td scope="row" class="timeslot">12:30 - 14:00</th>
@@ -280,9 +282,9 @@
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">14:00 - 14:45</th>
-                  <td class="topic">Modeling User Behavior</td>
-                  <td>Alexey Borisov</td>
-                  <td><a href="slides/05_UserBehavior.pdf" target="_blank">section slides</a></td>
+                  <td class="topic">Entities</td>
+                  <td>Tom Kenter, Christophe Van Gysel</td>
+                  <td><a href="slides/05_Entities.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">14:45 - 15:30</th>
