--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -90,10 +90,6 @@
             color: #999999;
         }
 
-        div#schedule table a {
-          display: none;
-        }
-
         /* Supporting marketing content */
         
         .marketing {
@@ -245,16 +241,22 @@
               </thead>
               <tbody>
                 <tr>
-                  <td scope="row" class="timeslot">09:00 - 09:45</th>
+                  <td scope="row" class="timeslot">09:00 - 09:05</th>
+                  <td class="topic">Introduction</td>
+                  <td>Alexey Borisov</td>
+                  <td><a href="slides/01_Introduction.pdf" target="_blank">section slides</a></td>
+                </tr>
+                <tr>
+                  <td scope="row" class="timeslot">09:05 - 09:45</th>
                   <td class="topic">Preliminaries</td>
                   <td>Alexey Borisov</td>
-                  <td><a href="slides/01_Preliminaries.pdf" target="_blank">section slides</a></td>
+                  <td><a href="slides/02_Preliminaries.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">09:45 - 10:30</th>
                   <td class="topic">Modeling User Behavior</td>
                   <td>Alexey Borisov</td>
-                  <td><a href="slides/05_UserBehavior.pdf" target="_blank">section slides</a></td>
+                  <td><a href="slides/03_UserBehavior.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr class="break">
                   <td scope="row" class="timeslot">10:30 - 11:00</th>
@@ -266,13 +268,13 @@
                   <td scope="row" class="timeslot">11:00 - 11:45</th>
                   <td class="topic">Semantic matching</td>
                   <td>Christophe Van Gysel</td>
-                  <td><a href="slides/02_SemanticMatching.pdf" target="_blank">section slides</a></td>
+                  <td><a href="slides/04_SemanticMatching.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">11:45 - 12:30</th>
                   <td class="topic">Learning to rank</td>
                   <td>Christophe Van Gysel, Hosein Azarbonyad</td>
-                  <td><a href="slides/03_LearningToRank.pdf" target="_blank">section slides</a></td>
+                  <td><a href="slides/05_LearningToRank.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr class="break">
                   <td scope="row" class="timeslot">12:30 - 14:00</th>
@@ -284,13 +286,13 @@
                   <td scope="row" class="timeslot">14:00 - 14:45</th>
                   <td class="topic">Entities</td>
                   <td>Tom Kenter, Christophe Van Gysel</td>
-                  <td><a href="slides/05_Entities.pdf" target="_blank">section slides</a></td>
+                  <td><a href="slides/06_Entities.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">14:45 - 15:30</th>
                   <td class="topic">Generating Responses</td>
                   <td>Tom Kenter</td>
-                  <td><a href="slides/06_GeneratingResponses.pdf" target="_blank">section slides</a></td>
+                  <td><a href="slides/07_GeneratingResponses.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr class="break">
                   <td scope="row" class="timeslot">15:30 - 16:00</th>
@@ -302,13 +304,13 @@
                   <td scope="row" class="timeslot">16:00 - 16:45</th>
                   <td class="topic">Recommender systems</td>
                   <td>Hosein Azarbonyad</td>
-                  <td><a href="slides/07_RecommenderSystems.pdf" target="_blank">section slides</a></td>
+                  <td><a href="slides/08_RecommenderSystems.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">16:45 - 17:30</th>
                   <td class="topic">Industry insights</td>
                   <td>Alexey Borisov, Tom Kenter</td>
-                  <td><a href="slides/08_IndustryInsights.pdf" target="_blank">section slides</a></td>
+                  <td><a href="slides/09_IndustryInsights.pdf" target="_blank">section slides</a></td>
                 </tr>
               </tbody>
             </table>
