Minor schedule tweak.

--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -309,7 +309,7 @@
                 <tr>
                   <td scope="row" class="timeslot">16:45 - 17:30</th>
                   <td class="topic">Industry insights</td>
-                  <td>Alexey Borisov, Tom Kenter</td>
+                  <td>Tom Kenter</td>
                   <td><a href="slides/09_IndustryInsights.pdf" target="_blank">section slides</a></td>
                 </tr>
               </tbody>
