Update schedule to reflect coffee break.

--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -289,16 +289,22 @@
                   <td><a href="slides/06_Entities.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
-                  <td scope="row" class="timeslot">14:45 - 15:30</th>
-                  <td class="topic">Generating Responses</td>
+                  <td scope="row" class="timeslot">14:45 - 15:00</th>
+                  <td class="topic">Generating Responses (Part I)</td>
                   <td>Tom Kenter</td>
                   <td><a href="slides/07_GeneratingResponses.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr class="break">
-                  <td scope="row" class="timeslot">15:30 - 16:00</th>
+                  <td scope="row" class="timeslot">15:00 - 15:30</th>
                   <td>Coffee break</td>
                   <td />
                   <td />
+                </tr>
+                <tr>
+                  <td scope="row" class="timeslot">15:30 - 16:00</th>
+                  <td class="topic">Generating Responses (Part II)</td>
+                  <td>Tom Kenter</td>
+                  <td><a href="slides/07_GeneratingResponses.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">16:00 - 16:45</th>
