Update schedule to reflect reality.

--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -313,10 +313,16 @@
                   <td><a href="slides/08_RecommenderSystems.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
-                  <td scope="row" class="timeslot">16:45 - 17:30</th>
+                  <td scope="row" class="timeslot">16:45 - 17:00</th>
                   <td class="topic">Industry insights</td>
                   <td>Tom Kenter</td>
                   <td><a href="slides/09_IndustryInsights.pdf" target="_blank">section slides</a></td>
+                </tr>
+                <tr>
+                  <td scope="row" class="timeslot">17:00 - 17:30</th>
+                  <td class="topic">Q + A</td>
+                  <td>Tom Kenter, Christophe Van Gysel, Hosein Azarbonyad</td>
+                  <td />
                 </tr>
               </tbody>
             </table>
