--- a/ecir2018/index.html
+++ b/ecir2018/index.html
@@ -156,6 +156,25 @@
         </div>
         <!-- /.container -->
 
+        <div id="schedule" class="container marketing">
+            <h2>Citation</h2>
+
+            <p>If you wish to refer to the tutorial in your scientific publication, please refer to our overview paper:
+
+            <div class="card">
+            <div class="card-block" style="background: #F5F5F5">
+            <pre class="card-text"><code>@inproceedings{Kenter2018nn4irecir,
+  Author = {Kenter, Tom and Borisov, Alexey and Van Gysel, Christophe and Dehghani, Mostafa and de Rijke, Maarten and Mitra, Bhaskar},
+  Booktitle = {ECIR 2018},
+  Organization = {Springer},
+  Title = {Neural Networks for Information Retrieval},
+  Year = {2018}}</code></pre>
+            </div>
+            </div>
+            </p>
+
+        </div>
+
         <div class="container marketing">
             <h1 style="text-align: center">Organizers</h1>
             <div class="row">
@@ -180,12 +199,9 @@
             </div>
             <!-- /.row -->
             <div class="row">
-                <div class="col-lg-4">
-                    <a href="http://humanities.uva.nl/~dehghani/"><img class="rounded-circle" src="http://2.gravatar.com/avatar/8d357c923d6d2ed63ab57fe779c1befc?s=180&d=mm&r=g" alt="Mostafa Dehgahni" width="100" height="100">
-                        <h2>Mostafa Dehghani</h2>
-                    </a>
+                <div class="col-lg-2">
                 </div>
-                <!-- /.col-lg-4 -->
+                <!-- /.col-lg-2 -->
                 <div class="col-lg-4">
                     <a href="https://staff.fnwi.uva.nl/m.derijke/"><img class="rounded-circle" src="http://2.gravatar.com/avatar/e95563926a4885fc43a51a0bdb888d18?s=180&d=mm&r=g" alt="Maarten de Rijke" width="100" height="100">
                         <h2>Maarten de Rijke</h2>
@@ -198,6 +214,9 @@
                     </a>
                 </div>
                 <!-- /.col-lg-4 -->
+                <div class="col-lg-2">
+                </div>
+                <!-- /.col-lg-2 -->
             </div>
             <!-- /.row -->
         </div>
