--- a/ecir2018/index.html
+++ b/ecir2018/index.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems. What are the underlying key technologies and what key insights into IR problems are they able to give us? This full-day tutorial gives a clear overview of current tried-and-trusted neural methods in IR and how they benefit IR research and our understanding of IR problems. Additionally, we peek into the future by examining recently introduced paradigms as well as current challenges. Expect to learn about neural networks in semantic matching, ranking, user interaction, and response generation in a highly interactive tutorial.">
-    <meta name="author" content="Tom Kenter, Alexey Borisov, Christophe van Gysel, Mostafa Dehghani, Maarten de Rijke, Bhaskar Mitra">
+    <meta name="author" content="Tom Kenter, Christophe van Gysel, Maarten de Rijke, Bhaskar Mitra">
 
     <title>ECIR 2018 - Neural Networks for Information Retrieval</title>
+
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
     <meta property="og:title" content="Neural Networks for Information Retrieval at ECIR 2018" />
     <meta property="og:type" content="website" />
@@ -131,6 +133,7 @@
             text-align: center;
         }
         .marketing h2 {
+            margin-top: 5px;
             font-weight: normal;
             font-size: 1.2em;
         }
@@ -138,9 +141,14 @@
             margin-right: .75rem;
             margin-left: .75rem;
         }
+
+        #fancy-header {
+            display: none;
+        }
+
         @media (min-width: 40em) {
             /* Bump up size of carousel content */
-            
+
             .carousel-caption p {
                 margin-bottom: 1.25rem;
                 font-size: 1.25rem;
@@ -153,6 +161,19 @@
         @media (min-width: 62em) {
             .featurette-heading {
                 margin-top: 7rem;
+            }
+        }
+        @media (min-width: 1200px) {
+            #fancy-header {
+                display: block;
+            }
+
+            div.jumbotron {
+                top: -50px;
+            }
+
+            div.jumbotron h1 {
+                display: none;
             }
         }
     </style>
@@ -192,7 +213,7 @@
             </div>
         </div>
 
-        <div class="jumbotron">
+        <div class="jumbotron" style="position: relative; z-index: 0; padding-bottom: 1em">
             <h1 class="display-3">Neural Networks for Information Retrieval</h1>
             <p class="lead">Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems.</p>
             <p><a class="btn btn-lg btn-info" href="https://www.ecir2018.org/" role="button">More information on the ECIR website</a>
@@ -354,7 +375,6 @@
             </div>
             <!-- /.row -->
         </div>
-        <!-- /.container -->
 
         <!-- Bootstrap core JavaScript
     ================================================== -->
