--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@ div.editions div.edition a div.inner {
         <p class="lead">Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems.</p>
     </div>
 
+    <div style="display: block; margin: 0 auto 0 auto; max-width: 900px">
+        <div class="alert alert-info" role="alert">
+          <strong>Are you looking for the ECIR 2018 tutorial?</strong> Click <a href="ecir2018">here</a>.
+        </div>
+    </div>
+
     <div class="editions">
         <div style="display: inline-block; width: 250px">
             <h2>Upcoming editions</h2>
