--- a/ecir2018/index.html
+++ b/ecir2018/index.html
@@ -241,13 +241,16 @@
                   <td scope="row" class="timeslot">09:30 - 10:15</th>
                   <td class="topic">Introduction &amp; preliminaries</td>
                   <td>Tom Kenter</td>
-                  <td />
+                  <td>
+                      <a href="slides/01_Introduction.pdf" target="_blank">section slides 1</a> <br />
+                      <a href="slides/02_Preliminaries.pdf" target="_blank">section slides 2</a>
+                  </td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">10:15 - 11:00</th>
                   <td class="topic">Semantic matching</td>
                   <td>Christophe Van Gysel</td>
-                  <td />
+                  <td><a href="slides/03_SemanticMatching.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr class="break">
                   <td scope="row" class="timeslot">11:00 - 11:30</th>
@@ -259,13 +262,13 @@
                   <td scope="row" class="timeslot">11:30 - 12:15</th>
                   <td class="topic">Learning to rank</td>
                   <td>Bhaskar Mitra</td>
-                  <td />
+                  <td><a href="slides/04_LearningToRank.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">12:15 - 13:00</th>
                   <td class="topic">Entities</td>
                   <td>Tom Kenter, Christophe Van Gysel</td>
-                  <td />
+                  <td><a href="slides/05_Entities.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr class="break">
                   <td scope="row" class="timeslot">13:00 - 14:30</th>
@@ -277,13 +280,13 @@
                   <td scope="row" class="timeslot">14:30 - 15:15</th>
                   <td class="topic">Modeling user behavior</td>
                   <td>Maarten de Rijke</td>
-                  <td />
+                  <td><a href="slides/06_ModelingUserBehavior.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">15:15 - 16:00</th>
                   <td class="topic">Generating Responses</td>
                   <td>Tom Kenter</td>
-                  <td />
+                  <td><a href="slides/07_GeneratingResponses.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr class="break">
                   <td scope="row" class="timeslot">16:00 - 16:30</th>
@@ -295,13 +298,13 @@
                   <td scope="row" class="timeslot">16:30 - 17:15</th>
                   <td class="topic">Recommender systems</td>
                   <td>Maarten de Rijke</td>
-                  <td />
+                  <td><a href="slides/08_RecommenderSystems.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">17:15 - 17:45</th>
                   <td class="topic">Industry insights</td>
-                  <td>Tom Kenter</td>
-                  <td />
+                  <td>Tom Kenter, Bhaskar Mitra</td>
+                  <td><a href="slides/09_IndustryInsights.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">17:45 - 18:30</th>
@@ -311,6 +314,8 @@
                 </tr>
               </tbody>
             </table>
+
+            <p><a href="slides/References.pdf" target="_blank">References</a> &mdash; <a href="slides/NN4IR.pdf" target="_blank">All slides</a></p>
 
             <h2>Citation</h2>
 
