--- a/ecir2018/index.html
+++ b/ecir2018/index.html
@@ -88,6 +88,7 @@
 
         tr.break {
             color: #999999;
+            display: none;
         }
 
         /* Supporting marketing content */
@@ -188,7 +189,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#schedule">Schedule</a>
+            <a class="nav-link" href="#schedule">Table of contents</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#organizers">Organizers</a>
@@ -216,14 +217,13 @@
         <div class="jumbotron" style="position: relative; z-index: 0; padding-bottom: 1em">
             <h1 class="display-3">Neural Networks for Information Retrieval</h1>
             <p class="lead">Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems.</p>
-            <p><a class="btn btn-lg btn-info" href="https://www.ecir2018.org/" role="button">More information on the ECIR website</a>
-            </p>
+            <p><a class="btn btn-lg btn-success" href="slides/NN4IR.pdf" target="_blank" role="button" style="padding-top: .50rem; padding-bottom: .50rem; padding-left: 1rem"><img src="images/glyphicons-201-download.png" /> &nbsp; <span style="display: inline; vertical-align: text-top;">Download slides (PDF, 28MB)</span></a></p>
             <h5>Full-day tutorial at ECIR 2018 on March 26, 2018</h5>
         </div>
         <!-- /.container -->
 
         <div id="schedule" class="container marketing">
-            <h1 style="text-align: center">Schedule</h1>
+            <h1 style="text-align: center">Table of contents</h1>
 
             <p>The tutorial is organized in 9 parts as described below. For more details, see the <a href="ecir2018-tutorial-nn4ir.pdf" target="_new">overview paper</a>.</p>
 
