--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ div.editions div.edition {
     display: inline-block;
     vertical-align: top;
     height: 100%;
-    padding: 0 15px 0 15px;
+    padding: 0 50px 0 50px;
 }
 
 div.editions div.edition a div.inner {
@@ -227,47 +227,31 @@ div.editions div.edition a div.inner {
         <p class="lead">Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems.</p>
     </div>
 
-    <div style="display: block; margin: 0 auto 0 auto; max-width: 900px">
-        <div class="alert alert-info" role="alert">
-          <strong>Are you looking for the ECIR 2018 tutorial?</strong> Click <a href="ecir2018">here</a>.
+    <div class="editions" style="text-align: center">
+        <div class="edition">
+            <a href="ecir2018">
+                <div class="inner">
+                    <img src="ecir2018/images/ecir2018.png" alt="Neural Networks for Information Retrieval at ECIR 2018" width="175px" /></br >
+                    ECIR 2018
+                </div>
+            </a>
         </div>
-    </div>
-
-    <div class="editions">
-        <div style="display: inline-block; width: 250px">
-            <h2>Upcoming editions</h2>
-            <div class="edition">
-                <a href="ecir2018">
-                    <div class="inner">
-                        <img src="ecir2018/images/ecir2018.png" alt="Neural Networks for Information Retrieval at ECIR 2018" width="175px" /></br >
-                        ECIR 2018
-                    </div>
-                </a>
-            </div>
+        <div class="edition">
+            <a href="wsdm2018">
+                <div class="inner">
+                    <img src="wsdm2018/images/wsdm2018.png" alt="Neural Networks for Information Retrieval at WSDM 2018" width="175px" /></br >
+                    WSDM 2018
+                </div>
+            </a>
         </div>
-        <span class="separator">
-            <div style="height: 200px; display: inline-block; vertical-align: top; padding: 0 5px 0 0px"></div>
-            <div style="border-left: 1px solid #000; height: 200px; display: inline-block; vertical-align: top; padding: 0 25px 0 0"></div>
-        </span>
-        <div style="display: inline-block; width: 425px">
-            <h2>Past editions</h2>
-            <div class="edition">
-                <a href="wsdm2018">
-                    <div class="inner">
-                        <img src="wsdm2018/images/wsdm2018.png" alt="Neural Networks for Information Retrieval at WSDM 2018" width="175px" /></br >
-                        WSDM 2018
-                    </div>
-                </a>
+        <div class="edition">
+            <a href="sigir2017">
+                <div class="inner">
+                    <img src="sigir2017/images/sigir2017.png" alt="Neural Networks for Information Retrieval at SIGIR 2017" width="75px" /><br />
+                    SIGIR 2017
+                </div>
+            </a>
             </div>
-            <div class="edition">
-                <a href="sigir2017">
-                    <div class="inner">
-                        <img src="sigir2017/images/sigir2017.png" alt="Neural Networks for Information Retrieval at SIGIR 2017" width="75px" /><br />
-                        SIGIR 2017
-                    </div>
-                </a>
-            </div>
-        </div>
     </div>
 </body>
 
