--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -221,10 +221,6 @@
         </div>
 
         <div class="jumbotron" style="position: relative; z-index: 0; padding-bottom: 1em">
-            <div class="alert alert-warning" role="alert">
-              <strong>Are you looking for the ECIR 2018 tutorial?</strong> Click <a href="../ecir2018">here</a>.
-            </div>
-
             <h1 class="display-3">Neural Networks for Information Retrieval</h1>
             <p class="lead">Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems.</p>
             <p><a class="btn btn-lg btn-success" href="slides/NN4IR.pdf" target="_blank" role="button" style="padding-top: .50rem; padding-bottom: .50rem; padding-left: 1rem"><img src="images/glyphicons-201-download.png" /> &nbsp; <span style="display: inline; vertical-align: text-top;">Download slides (PDF, 30MB)</span></a></p>
@@ -378,7 +374,7 @@
             <!-- /.row -->
             <div class="row">
 		<div class="col-lg-4">
-                  <a href="https://staff.fnwi.uva.nl/h.azarbonyad/"><img class="rounded-circle" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAd4AAAAJDI5YTIxMDA2LWFhMTgtNDhjYi1hNzYwLWM0MDY4OWFlZWI2ZA.jpg" alt="Hosein Azarbonyad" width="100" height="100">
+                  <a href="https://staff.fnwi.uva.nl/h.azarbonyad/"><img class="rounded-circle" src="https://pbs.twimg.com/profile_images/940152420444790785/4qzMeQRG_400x400.jpg" alt="Hosein Azarbonyad" width="100" height="100">
                     <h2>Hosein Azarbonyad</h2>
                   </a>
 		</div>
